# mzpeak-rs

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CHROMATOGRAM_IMPLEMENTATION.md  COMMIT_MESSAGE.txt  CONTAINER_FORMAT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  TASK_SUMMARY.md  TECHNICAL_SPEC.md  TESTING_IMPLEMENTATION.md  TESTING_QUICKSTART.md  pyproject.toml  run_benchmarks.sh  wget-log
.github/workflows/: ci.yml
audit/: thin_waist_v1.md  vendor_coverage.md
audit/issues/issue-000-end-to-end-streaming-gap/: issue.md
audit/issues/issue-001-python-zero-copy-array-views/: issue.md
audit/issues/issue-001-silent-data-corruption-parallel-decode/: issue.md
audit/issues/issue-002-container-reader-full-buffer-load/: issue.md
audit/issues/issue-002-documentation-cleanup/: issue.md
audit/issues/issue-003-examples-cleanup/: issue.md
audit/issues/issue-003-reader-materializes-all-batches/: issue.md
audit/issues/issue-004-python-iter_spectra-eager/: issue.md
audit/issues/issue-004-streamer-buffer-reuse/: issue.md
audit/issues/issue-005-aos-layout-optimization/: issue.md
audit/issues/issue-005-python-to_arrow-materializes/: issue.md
audit/issues/issue-006-python-soa-writer-api/: issue.md
audit/issues/issue-006-simd-expected-length-unchecked/: issue.md
audit/issues/issue-007-soa-docs-tests-examples/: issue.md
audit/issues/issue-007-unwraps-in-production/: issue.md
audit/issues/issue-008-mzml-streamer-allocation-benchmark/: issue.md
audit/issues/issue-008-python-zero-copy-missing-array-views/: issue.md
audit/issues/issue-009-python-errors-drop-cause/: issue.md
audit/issues/issue-009-soa-reader-zero-copy/: issue.md
audit/issues/issue-010-config-bloat-unused-deps/: issue.md
audit/issues/issue-010-vendor-coverage/: issue.md
audit/issues/issue-011-pyproject-pyarrow-hard-dep/: issue.md
audit/issues/issue-012-pyproject-pytest-testpaths/: issue.md
audit/issues/issue-013-documentation-fragmentation/: issue.md
audit/issues/issue-014-example-rot-duplicates/: issue.md
audit/issues/issue-015-mzml-streamer-buffer-reuse/: issue.md
audit/issues/issue-016-python-type-stubs-any/: issue.md
audit/issues/issue-017-aos-peak-layout-limits-simd/: issue.md
background_agents/: SOTA_INSTRUCTIONS.md
benches/: README.md  conversion.rs  filtering.rs  mzml_streamer.rs  query_performance.rs
data/20201207_tims03_Evo03_PS_SA_HeLa_200ng_EvoSep_prot_DDA_21min_8cm_S1-C10_1_22476.d/: SampleInfo.xml  chromatography-data-pre.sqlite  chromatography-data.sqlite
data/20201207_tims03_Evo03_PS_SA_HeLa_200ng_EvoSep_prot_DDA_21min_8cm_S1-C10_1_22476.d/22476.m/: InstrumentSetup.isset  Maldi.method  desktop.ini  hystar.method  microTOFQImpacTemAcquisition.method  submethods.xml
docs/: PYTHON_API.md  PYTHON_BINDINGS_PLAN.md  ROADMAP.md  SCHEMA_V2.md  TECHNICAL_SPEC.md  vendor_coverage.md
examples/: analyze_compression.py  analyze_gains.rs  benchmark_converter.rs  benchmark_duckdb_queries.py  benchmark_publication.py  benchmark_pyteomics_comparison.py  chromatogram_generation_demo.rs  compare_compression.rs  compression_benchmark.rs  container_format_demo.rs  dataframe_integration.py  decode_only.rs  diagnose_frame_91.rs  duckdb_queries.sql  inspect_frame_91_binary.rs  lookup_speed.rs  mzml_benchmark.rs  parallel_benchmark.rs  rowgroup_benchmark.rs  show_compression_improvements.rs  soa_roundtrip.rs  tdf_throughput_benchmark.rs  test_alphatims_dda.rs  test_read_converted.rs  test_read_real.rs  validate_lossless.rs
examples/benchmarks/: batch_benchmark.rs  mzml_benchmark.rs  parallel_write_benchmark.rs  quick_tdf_convert.rs  scaling_benchmark.rs  thermo_benchmark.rs
examples/validation/: test_alphatims_dda.rs
fuzz/: Cargo.toml  README.md  run_fuzzer.sh
fuzz/fuzz_targets/: fuzz_mzml_streamer.rs
latex/: mzpeak_jpr_manuscript.aux  mzpeak_jpr_manuscript.bbl  mzpeak_jpr_manuscript.blg  mzpeak_jpr_manuscript.out  mzpeak_jpr_manuscript.tex  mzpeak_references.bib
latex/latex-style-package/: acs-latex-template.tex
notebooks/: quickstart.ipynb
python/: mzpeak.pyi
python_tests/: test_dataframe_integration.py  test_smoke.py
src/: chromatogram_writer.rs  controlled_vocabulary.rs  dataset.rs  ingest.rs  lib.rs  main.rs  metadata.rs  mobilogram_writer.rs  reader.rs  schema.rs  validator.rs  writer.rs
src/cli/: config.rs  convert.rs  convert_thermo.rs  demo.rs  info.rs  mod.rs  profile.rs  validate.rs
src/dataset/: error.rs  mod.rs  stats.rs  tests.rs  types.rs  writer_impl.rs  writer_v2.rs
src/formats/: mod.rs
src/formats/mzml/: mod.rs
src/formats/readers/: mod.rs  raw_tdf_frame.rs  tdf_streamer.rs
src/formats/tdf/: converter.rs  error.rs  parallel_converter.rs
src/formats/thermo/: error.rs
src/metadata/: error.rs  instrument.rs  lc.rs  mod.rs  mzpeak.rs  processing.rs  run.rs  sdrf.rs  source.rs  tests.rs  traces.rs
src/mzml/: binary.rs  converter.rs  cv_params.rs  external.rs  mod.rs  models.rs  simd.rs  streamer.rs
src/mzml/converter/: mod.rs  parallel.rs  sequential.rs  spectrum.rs  tests.rs
src/python/: converter.rs  cv.rs  exceptions.rs  metadata.rs  mod.rs  reader.rs  types.rs  validator.rs  writer.rs
src/reader/: batches.rs  config.rs  error.rs  metadata.rs  mod.rs  open.rs  spectra.rs  spectra_v2.rs  subfiles.rs  summary.rs  tests.rs  utils.rs  zip_chunk_reader.rs
src/readers/: mod.rs  raw_tdf_frame.rs  tdf_streamer.rs
src/schema/: builders.rs  chromatogram_columns.rs  columns.rs  constants.rs  manifest.rs  mod.rs  spectra_columns.rs  tests.rs  validation.rs
src/tdf/: converter.rs  mod.rs  parallel_converter.rs
src/thermo/: converter.rs  mod.rs  streamer.rs
src/validator/: data.rs  metadata.rs  mod.rs  report.rs  schema.rs  structure.rs
src/writer/: ASYNC_WRITER_SPEC.md  async_writer.rs  config.rs  error.rs  mod.rs  peaks_writer_v2.rs  rolling.rs  spectra_writer.rs  stats.rs  tests.rs  types.rs  writer_impl.rs
tests/: chromatogram_generation_test.rs  imzml_integration.rs  integration_test.rs  parallel_decode_tests.rs  test_container_format.rs
(+36 files in other folders)
