[package]
name = "mzpeak"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["mzPeak Contributors"]
description = "A modern, scalable, and interoperable mass spectrometry data format based on Apache Parquet"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filiprumenovski/mzpeak-rs"
documentation = "https://docs.rs/mzpeak"
homepage = "https://github.com/filiprumenovski/mzpeak-rs"
readme = "README.md"
keywords = ["mass-spectrometry", "proteomics", "metabolomics", "parquet", "bioinformatics"]
categories = ["science", "encoding", "parser-implementations"]
exclude = ["*.mzML", "*.raw", "*.parquet", "mzPeak_preprint_v02.pdf"]

[features]
default = ["colorized_output"]
# Python bindings via PyO3
python = ["pyo3", "pyo3-log"]
# Colorized CLI output
colorized_output = ["console"]
# Parallel decoding with SIMD acceleration for mzML conversion
parallel-decode = ["rayon", "base64-simd", "wide", "fast-float"]

[dependencies]
# Apache Arrow and Parquet for columnar storage
arrow = { version = "54", features = ["ffi"] }
parquet = { version = "54", features = ["arrow", "zstd", "snap"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CSV/TSV parsing for SDRF
csv = "1.3"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# ZIP container support for single-file .mzpeak format
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# UUID for unique identifiers
uuid = { version = "1.11", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Bytes for Parquet reader ChunkReader trait
bytes = "1.9"

# Temp file for streaming container writes (Issue 000 fix)
tempfile = "3.14"

# mzML parsing
quick-xml = { version = "0.37", features = ["encoding"] }
base64 = "0.22"
flate2 = "1.0"
byteorder = "1.5"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Colorized CLI output
console = { version = "0.15", optional = true }

# Python bindings (optional)
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"], optional = true }
pyo3-log = { version = "0.12", optional = true }

# Parallel decoding with SIMD acceleration (optional)
rayon = { version = "1.10", optional = true }
base64-simd = { version = "0.8", optional = true }
wide = { version = "0.7", optional = true }
fast-float = { version = "0.2", optional = true }

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "mzpeak"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "mzpeak-convert"
path = "src/main.rs"

[[bench]]
name = "conversion"
harness = false

[[bench]]
name = "query_performance"
harness = false

[[bench]]
name = "filtering"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# Lint configuration - Issue 007: Prevent unwrap() in production code
[lints.clippy]
# Deny unwrap() calls in non-test code to prevent panics on malformed data.
# This is critical for enterprise-grade scientific software.
unwrap_used = "warn"  # Start as warning, upgrade to "deny" after audit
# Also prevent expect() with non-descriptive messages
# expect_used = "warn"
