[package]
name = "mzpeak"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["mzPeak Contributors"]
description = "A modern, scalable, and interoperable mass spectrometry data format based on Apache Parquet"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filiprumenovski/mzpeak-rs"
documentation = "https://docs.rs/mzpeak"
homepage = "https://github.com/filiprumenovski/mzpeak-rs"
readme = "README.md"
keywords = ["mass-spectrometry", "proteomics", "metabolomics", "parquet", "bioinformatics"]
categories = ["science", "encoding", "parser-implementations"]
exclude = ["*.mzML", "*.raw", "*.parquet", "mzPeak_preprint_v02.pdf"]

[features]
default = ["colorized_output", "mzml"]
# Python bindings for PyO3 extension module.
python = ["pyo3", "pyo3-log", "numpy"]
# Colorized CLI output
colorized_output = ["console"]
# mzML parsing (optional)
mzml = ["quick-xml", "base64", "flate2", "byteorder"]
# Bruker TDF parsing (optional) - includes rayon for parallel conversion
tdf = ["timsrust", "rayon"]
# Thermo RAW parsing (optional) - requires .NET 8 runtime
thermo = ["thermorawfilereader"]
# Parallel decoding with SIMD acceleration for mzML conversion
mzml-parallel = ["mzml", "rayon", "base64-simd", "wide", "fast-float"]
# Deprecated alias for backwards compatibility
parallel-decode = ["mzml-parallel"]

[dependencies]
# Apache Arrow and Parquet for columnar storage
arrow = { version = "54", features = ["ffi"] }
parquet = { version = "54", features = ["arrow", "zstd", "snap"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CSV/TSV parsing for SDRF
csv = "1.3"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# ZIP container support for single-file .mzpeak format
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# UUID for unique identifiers
uuid = { version = "1.11", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Python bindings (optional)
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
pyo3-log = { version = "0.10", optional = true }
numpy = { version = "0.21", optional = true }

# Bytes for Parquet reader ChunkReader trait
bytes = "1.9"

# Temp file for streaming container writes (Issue 000 fix)
tempfile = "3.14"

# Crossbeam channel for async writer pipeline
crossbeam-channel = "0.5"

# mzML parsing (optional)
quick-xml = { version = "0.37", features = ["encoding"], optional = true }
base64 = { version = "0.22", optional = true }
flate2 = { version = "1.0", optional = true }
byteorder = { version = "1.5", optional = true }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# TOML config file parsing
toml = "0.8"

# Colorized CLI output
console = { version = "0.15", optional = true }

# Parallel decoding with SIMD acceleration (optional)
rayon = { version = "1.10", optional = true }
base64-simd = { version = "0.8", optional = true }
wide = { version = "0.7", optional = true }
fast-float = { version = "0.2", optional = true }

# Bruker TDF reader (path override; subject to change to git/published crate)
timsrust = { path = "vendor/timsrust", optional = true }

# Thermo RAW reader (optional) - requires .NET 8 runtime
thermorawfilereader = { version = "0.5", optional = true }

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "mzpeak"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "mzpeak-convert"
path = "src/main.rs"

[[bench]]
name = "conversion"
harness = false

[[bench]]
name = "query_performance"
harness = false

[[bench]]
name = "filtering"
harness = false

[[example]]
name = "compression_benchmark"
path = "examples/benchmarks/compression_benchmark.rs"
required-features = ["tdf"]

[[example]]
name = "parallel_benchmark"
path = "examples/benchmarks/parallel_benchmark.rs"
required-features = ["tdf"]

[[example]]
name = "parallel_write_benchmark"
path = "examples/benchmarks/parallel_write_benchmark.rs"
required-features = ["tdf"]

[[example]]
name = "batch_benchmark"
path = "examples/benchmarks/batch_benchmark.rs"
required-features = ["tdf"]

[[example]]
name = "rowgroup_benchmark"
path = "examples/benchmarks/rowgroup_benchmark.rs"
required-features = ["tdf"]

[[example]]
name = "scaling_benchmark"
path = "examples/benchmarks/scaling_benchmark.rs"
required-features = ["tdf"]

[[example]]
name = "test_alphatims_dda"
path = "examples/validation/test_alphatims_dda.rs"
required-features = ["tdf"]

[[example]]
name = "thermo_benchmark"
path = "examples/benchmarks/thermo_benchmark.rs"
required-features = ["thermo"]

[[example]]
name = "mzml_benchmark"
path = "examples/benchmarks/mzml_benchmark.rs"
required-features = ["mzml"]

[[example]]
name = "tdf_throughput_benchmark"
path = "examples/benchmarks/tdf_throughput_benchmark.rs"
required-features = ["tdf"]

[[example]]
name = "quick_tdf_convert"
path = "examples/benchmarks/quick_tdf_convert.rs"
required-features = ["tdf"]

[[example]]
name = "chromatogram_generation_demo"
path = "examples/guides/chromatogram_generation_demo.rs"

[[example]]
name = "container_format_demo"
path = "examples/guides/container_format_demo.rs"

[[example]]
name = "soa_roundtrip"
path = "examples/guides/soa_roundtrip.rs"

[[example]]
name = "validate_lossless"
path = "examples/validation/validate_lossless.rs"
required-features = ["mzml"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# Lint configuration - Issue 007: Prevent unwrap() in production code
[lints.clippy]
# Deny unwrap() calls in non-test code to prevent panics on malformed data.
# This is critical for enterprise-grade scientific software.
unwrap_used = "warn"  # Start as warning, upgrade to "deny" after audit
# Also prevent expect() with non-descriptive messages
# expect_used = "warn"
