[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "mzpeak"
version = "0.1.0"
description = "High-performance mass spectrometry data format with zero-copy Arrow integration"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "mzPeak Contributors" }
]
keywords = ["mass-spectrometry", "proteomics", "metabolomics", "parquet", "arrow", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.8"
dependencies = [
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5.0"]
polars = ["polars>=0.19.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pandas>=1.5.0",
    "polars>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/mzpeak/mzpeak-rs"
Documentation = "https://docs.rs/mzpeak"
Repository = "https://github.com/mzpeak/mzpeak-rs"

[tool.maturin]
# Build for the Python extension module
features = ["python"]
# Python module name
module-name = "mzpeak"
# Bindings type
bindings = "pyo3"
# Strip symbols for smaller binaries
strip = true
# Compatibility with Python 3.8+
compatibility = "manylinux2014"

[tool.pytest.ini_options]
testpaths = ["tests", "python/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
